03_infrastructure/external-access/dev/dashboard/ingressroute-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  routes:
    - match: Host(`dashboard.192.168.2.105.xip.io`)
      kind: Rule
      services:
        - name: dashboard-gatekeeper
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-tls
spec:
  routes:
    - match: Host(`dashboard.192.168.2.105.xip.io`)
      kind: Rule
      services:
        - name: dashboard-gatekeeper
          port: 3000
